<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff">


    <include layout="@layout/include_face_common_toolbar"/>


    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#33746d7b"/>

    <EditText
            android:id="@+id/et_feedback_email"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:background="#fff"
            android:paddingLeft="24dp"
            android:paddingStart="24dp"
            android:paddingRight="24dp"
            android:paddingEnd="24dp"
            android:textColorHint="#80746d7b"
            android:hint="@string/feedback_email_hint"
            android:gravity="start|center_vertical"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#33746d7b"/>

    <EditText
            android:id="@+id/et_feedback_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="24dp"
            android:paddingStart="24dp"
            android:paddingRight="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="20dp"
            android:gravity="start"
            android:textColorHint="#746d7b"
            android:lineSpacingExtra="6dp"
            android:textColor="#58565c"
            android:textSize="13sp"
            android:fontFamily="sans-serif"
            android:hint="@string/feedback_detail_hint"
            android:background="#ffffff"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#33746d7b"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="246dp"
            android:background="#f3f3f3"/>
    
    <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/feedback_submit"
            android:textColor="#fff"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:background="@drawable/feedback_submit_selector"/>

</LinearLayout>