<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/face_image_recycler_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        />

    <!--动态计算marginTop-->
    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_marginTop="278dp"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/txt_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/no_face_photo"
            android:textColor="#746d7b"
            android:textSize="15sp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            />

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="108dp"
            android:layout_height="48dp"
            android:layout_below="@id/txt_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="#6817fa"
            android:textSize="17sp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_progressbar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="347dp"
        android:src="@drawable/progressbar"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/txt_image_scan_state"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/searching_for_faces"
        android:textSize="15sp"
        android:textColor="#6e6d70"
        android:background="@drawable/face_images_loading_toast"
        android:visibility="gone"
        />
</RelativeLayout>

