<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/face_album_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/layout_no_permission"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no_permission_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/no_permission_album"
            android:textColor="#746d7b"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/ok_request_permission"
            android:layout_width="108dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@drawable/button_bg"
            android:text="@string/ok"
            android:textColor="#6817fa"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_no_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no_photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/no_face_photo"
            android:textColor="#746d7b"
            android:textSize="15sp" />

        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/no_photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@drawable/button_bg"
            android:text="@string/ok"
            android:textColor="#6817fa"
            android:textSize="17sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_progressbar"
        android:layout_width="60dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_height="60dp"
        android:src="@drawable/progressbar"/>
</FrameLayout>