<?xml version="1.0" encoding="utf-8"?>
<com.glt.magikoly.function.poster.FacePosterContainer
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/face_report_poster_width"
    android:layout_height="@dimen/face_report_poster_height">


    <ImageView
        android:id="@+id/poster_background"
        android:layout_width="@dimen/face_report_poster_width"
        android:layout_height="@dimen/face_report_poster_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="fitXY"
        android:src="@drawable/poster_bg_aging"/>

    <com.glt.magikoly.view.RoundedImageView
        android:id="@+id/poster_app_icon"
        android:layout_width="144px"
        android:layout_height="144px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="72px"
        android:layout_marginLeft="72px"
        android:layout_marginStart="72px"
        android:src="@drawable/app_icon"
        app:riv_corner_radius="6dp"
        android:scaleType="centerCrop"/>


    <TextView
        android:id="@+id/poster_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/app_name"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:layout_marginLeft="36px"
        android:layout_marginStart="36px"
        android:textSize="60px"
        app:layout_constraintLeft_toRightOf="@+id/poster_app_icon"
        app:layout_constraintTop_toTopOf="@+id/poster_app_icon"/>

    <TextView
        android:id="@+id/poster_app_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poster_app_desc"
        android:textColor="@color/white"
        android:textSize="36px"
        android:fontFamily="sans-serif-medium"
        android:layout_marginLeft="36px"
        android:layout_marginStart="36px"
        app:layout_constraintLeft_toRightOf="@+id/poster_app_icon"
        app:layout_constraintBottom_toBottomOf="@+id/poster_app_icon"/>


    <TextView
        android:id="@+id/poster_result_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300px"
        android:gravity="center"
        android:textSize="84px"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:shadowColor="#b3500f58"
        android:shadowDy="6.0"
        android:shadowRadius="18.0"
        android:text="@string/poster_result_title_gender_male"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="72px"
        android:layout_marginStart="72px"
        android:layout_marginRight="72px"
        android:layout_marginEnd="72px"/>

    <ImageView
        android:id="@+id/poster_result_image"
        android:layout_width="834px"
        android:layout_height="972px"
        android:layout_marginTop="564px"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/poster_original_image"
        android:layout_width="384px"
        android:layout_height="378px"
        android:translationY="-126px"
        android:translationX="-72px"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="@+id/poster_result_image"
        app:layout_constraintTop_toTopOf="@+id/poster_result_image"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/poster_water_mask"
        android:layout_width="288px"
        android:layout_height="114px"
        app:srcCompat="@drawable/ic_water_mask"
        android:scaleType="fitXY"
        app:layout_constraintRight_toRightOf="@+id/poster_result_image"
        app:layout_constraintBottom_toBottomOf="@+id/poster_result_image"
        android:layout_marginBottom="78px"
        android:layout_marginEnd="55px"
        android:layout_marginRight="55px"/>

    <TextView
        android:id="@+id/poster_result_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/poster_result_desc_gender_male"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:textSize="48px"
        android:textColor="@color/white"
        android:shadowColor="#e620155f"
        android:shadowDy="6.0"
        android:shadowRadius="12.0"
        app:layout_constraintBottom_toTopOf="@+id/poster_gp_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="48px"
        android:layout_marginLeft="72px"
        android:layout_marginStart="72px"
        android:layout_marginRight="72px"
        android:layout_marginEnd="72px"/>

    <TextView
        android:id="@+id/poster_gp_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/poster_gp_desc"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:textSize="39px"
        android:shadowColor="#e620155f"
        android:shadowDy="6.0"
        android:shadowRadius="12.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="120px"
        android:layout_marginLeft="72px"
        android:layout_marginStart="72px"
        android:layout_marginRight="72px"
        android:layout_marginEnd="72px"/>

</com.glt.magikoly.function.poster.FacePosterContainer>